 * Fix missed nowInSec values in QueryProcessor (CASSANDRA-17458)
 * Revert removal of withBufferSizeInMB(int size) in CQLSSTableWriter.Builder class and deprecate it in favor of withBufferSizeInMiB(int size) (CASSANDRA-17675)
 * Remove expired snapshots of dropped tables after restart (CASSANDRA-17619)
Merged from 4.0:
 * Mitigate direct buffer memory OOM on replacements (CASSANDRA-17895)
 * Fix repair failure on assertion if two peers have overlapping mismatching ranges (CASSANDRA-17900)
 * Better handle null state in Gossip schema migration to avoid NPE (CASSANDRA-17864)
 * HintedHandoffAddRemoveNodesTest now accounts for the fact that StorageMetrics.totalHints is not updated synchronously w/ writes (CASSANDRA-16679)
 * Avoid getting hanging repairs due to repair message timeouts (CASSANDRA-17613)
 * Prevent infinite loop in repair coordinator on FailSession (CASSANDRA-17834)
Merged from 3.11:
 * Suppress CVE-2022-25857 and other snakeyaml CVEs (CASSANDRA-17907)
 * Fix potential IndexOutOfBoundsException in PagingState in mixed mode clusters (CASSANDRA-17840)
Merged from 3.0:
 * Fix auto-completing "WITH" when creating a materialized view (CASSANDRA-17879)
 * Fix scrubber falling into infinite loop when the last partition is broken (CASSANDRA-17862)
 * Fix resetting schema (CASSANDRA-17819)

4.0.6
 * Prevent infinite loop in repair coordinator on FailSession (CASSANDRA-17834)
 * Fix race condition on updating cdc size and advancing to next segment (CASSANDRA-17792)
 * Add 'noboolean' rpm build for older distros like CentOS7 (CASSANDRA-17765)
 * Fix default value for compaction_throughput_mb_per_sec in Config class to match  the one in cassandra.yaml (CASSANDRA-17790)
 * Fix Setting Virtual Table - update after startup config properties gc_log_threshold_in_ms, gc_warn_threshold_in_ms,
   conf.index_summary_capacity_in_mb, prepared_statements_cache_size_mb, key_cache_size_in_mb, counter_cache_size_in_mb
   (CASSANDRA-17737)